--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1.0, user-scalable=yes" />  <!-- Ранее было так-->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.5, minimum-scale=1.0, user-scalable=yes"/>     -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1.0, user-scalable=yes" />  --> <!-- Ранее было так-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.5, minimum-scale=1.0, user-scalable=yes"/>    
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
